[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"

[dependencies]
# shapefile = "0.5"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# geojson = "0.24"
leaflet = "0.4"
gloo-events = "0.1"
gloo-utils = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlAnchorElement", "Window"] }

[lib]
crate-type = ["cdylib", "rlib"]
