[package]
name = "cartographer"
version = "0.1.0"
description = "PiFlite Mapping Window"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
implicit-clone = "0.3.6"
leaflet = "0.4"
wasm-bindgen = "0.2"
gloo-console = "0.2"
gloo-utils = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]
