[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "0.9.2" }
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
zip-extensions = "0.6"
error-chain = "0.12.4"
